connect mongo alat, create shirt api

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB="mongodb+srv://minhdanh:1110@cluster0.qlt8v.mongodb.net/test"
+MONGODB="mongodb+srv://minhdanh:1110@cluster0.qlt8v.mongodb.net/shop"
